--- a/pastabia-main (2)/index.html
+++ b/pastabia-main (2)/index.html
@@ -7,30 +7,39 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css"
 </head>
-<body>
-<header>
-<h1 class="titulo">joias da bia</h1>
+
+<h1 class="titulo">Joias B.F</h1>
 </ul>
 <img src="/tmp/guest-k5huu4/Downloads/pastabia-main/431f623eb48bada9e92890e36db13b36.png" alt="">
-<li>pulseiras, aneis e colares</li>
+<li>Pulseiras, aneis, colares e tornozeleiras</li>
 <li>entre no nosso site de joias</li>
+<li>jóias de qualidades e melhores opçoões</li>
+<li>e otimos preços</li>
+
 <h1 class="titulo">Pulseiras</h1>
-<li></li>
+
+  </header>
 </ul>
-  </header>    
 
   <section>
     <img class="bia" src="kit-4-pulseiras-feminina-folheada-a-ouro-semi-joias-kit-4-pulseiras-feminina-folheada-a-ouro-semi-jo.jpg" alt="">
-    <P>joias de qualidades e melhores opçoes</P>
-    <P> e otimos preços</P>
+  <p>Apartir de 44,99$</p>
   </section>
 
   <header>
     <h1 class="titulo">Anéis</h1>
-    <img src="c73819b4baed4d6f9895d789ae97b01f_tn.jpeg" alt="">
+    <img class="anel" src="c73819b4baed4d6f9895d789ae97b01f_tn.jpeg" alt="">
+    <P>Apartir de 31,90$</P>
 
     <h1 class="titulo"> Colares</h1>
     <img class="bebe" src="Mix-de-colares-Clara-Foto-1 (1).jpg" alt="">
+    <P>Apartir de 45,50$</P>
+     </header>
+
+     <header>
+<h1> tornozeleiras</h1>
+<img class="tzel" src="tornozeleira-semi-joia-dourada-com-pedra-6896 (1).jpeg" alt="">
+<P>Apartir de 39,99$</P>
      </header>
 </body>
 </html>
